# my_nas

./: .env.example  .gitignore  Cargo.toml  README.md
.sqlx/: query-20bb123bad999b840e7c07b68cfee801a9b8f99042ac3c12e98bb521e3173810.json  query-4bfc11d59ba03a37ce97f82e8f7b6f6a6531233435fed38e7486b030a2e6ee4c.json  query-638bc695918d0de7fed5bcd9ac67c0f29721048f95d3d178f06b62a37a23a74f.json  query-82b09ff65553babea6742bd260bc21221c69506b04e67586f7e7492afbadac6d.json  query-924bcb03a9ba48ada0655074ab8445578f1ccd2e41dc2ab5843857172b2b17c9.json  query-b9a842500878d77b3cb60c90a94825bba8cb3b61263b7b7bc495afe7f4636f63.json  query-f172a08cb0e1a1cb05be7c96c00ceebca42e66a26b33ffb8f39c986e71110b89.json  query-fb9af9df4aa7da4245d6d942632e2bc2c88f0618386f777d7d85fd734f6e303f.json
cert_env/: pyvenv.cfg
front/svelte-front/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
front/svelte-front/src/lib/: constants.js
front/svelte-front/src/routes/: +layout.js  +page.svelte  StorageWidget.svelte
migrations/: 20260530114133_init_nas_schema.sql  20260611120000_crew_hierarchy.sql  20260611130000_auth_sessions.sql  20260611140000_unique_names.sql  20260618120000_audit_logs.sql
scripts/: nas.sh
src/: main.rs
src/adapters/inbound/: mod.rs
src/adapters/outbound/: mod.rs
src/application/: audit.rs  auth.rs  crew.rs  files.rs  mod.rs  service.rs  trash.rs  webdav_vfs_service.rs
src/domain/: errors.rs  mod.rs  models.rs  ports.rs
src/infrastructure/: crypto.rs  mod.rs  rate_limit.rs  server.rs  stream.rs  subtitle.rs  webdav_auth.rs
(+22 files in other folders)
