[package]
name = "my_nas"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-embed = { version = "8.3", features = ["interpolate-folder-path"] }
async-trait = "0.1.89"
axum = "0.8.7"
blake3 = "1.8.3"
bytes = "1.11.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures = "0.3.32"
hyper = "1.8.1"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.38.3"
zip = "8.2.0"
dav-server = "0.11.0"
futures-util = "0.3.32"
urlencoding = "2.1.3"
async_zip = { version = "0.0.18", features = ["full", "zstd"] }
pingora = {version = "0.8.0", features = ["proxy", "openssl"]}

# QUIC

quinn = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
rustls = "0.23"
rustls-pemfile = "2.1"
h3 = { git = "https://github.com/hyperium/h3" }
h3-quinn = { git = "https://github.com/hyperium/h3" }
http = "1.4.0"
